ACP/ACK灰度发布/new-nignx-dep-and-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      run: new-nginx
  template:
    metadata:
      labels:
        run: new-nginx
    spec:
      containers:
        # 定义新版本的容器
        - image: registry.cn-hangzhou.aliyuncs.com/acs-sample/new-nginx
          imagePullPolicy: Always
          name: new-nginx
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: new-nginx
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: new-nginx
  # 不使用会话保持
  sessionAffinity: None
  # 将 Service 暴露为 NodePort 类型
  type: NodePort
