ACP/ACK灰度发布/network-policy-公网.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  # 指定网络策略所属的命名空间
  namespace: test-up
  # 指定网络策略的名称
  name: allow-public-network-for-labels
spec:
  # 匹配具有标签 "public-network: true" 的 Pod
  podSelector:
    matchLabels:
      public-network: "true"

  # 入站规则列表
  ingress:
    # 允许来自任何 IP 地址的流量访问
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0

  # 出站规则列表
  egress:
    # 允许访问任何 IP 地址
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
        # 允许访问具有命名空间标签 "ns: kube-system" 的命名空间
        - namespaceSelector:
            matchLabels:
              ns: kube-system


#这个网络策略的作用是在test-up命名空间中，
#允许具有标签 "public-network: true" 的Pod与任何IP地址进行入站和出站通信，
#同时也允许访问带有命名空间标签 "ns: kube-system" 的命名空间。

# - 是或的意思，不是且
